--- a/SpringMVCModelSample/src/main/resources/templates/helloThymeleaf.html
+++ b/SpringMVCModelSample/src/main/resources/templates/helloThymeleaf.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"> <!--타임리프 사용시 선언해줘야 됨-->
+<html xmlns:th="http://www.thymeleaf.org">
+<!--타임리프 사용시 선언해줘야 됨-->
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
