--- a/PathVariableSample/src/main/resources/templates/submit/b.html
+++ b/PathVariableSample/src/main/resources/templates/submit/b.html
@@ -5,6 +5,9 @@
     <title>버튼 B화면</title>
 </head>
 <body>
-ff
+버튼 B화면
+<form th:action="@{/send}" method="post">
+    <input type="submit" value="홈으로가기" name="h">
+</form>
 </body>
 </html>
