--- a/PathVariableSample/src/main/resources/templates/pathvaliable/function2.html
+++ b/PathVariableSample/src/main/resources/templates/pathvaliable/function2.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 <h1>기능 2의 화면 구현</h1>
+<form th:action="@{/send}" method="post">
+    <input type="submit" value="홈으로가기" name="h">
+</form>
 </body>
 </html>
