--- a/PathVariableSample/src/main/resources/templates/submit/a.html
+++ b/PathVariableSample/src/main/resources/templates/submit/a.html
@@ -5,6 +5,9 @@
     <title>버튼 A화면</title>
 </head>
 <body>
-aa
+    버튼의 A 화면
+    <form th:action="@{/send}" method="post">
+        <input type="submit" value="홈으로가기" name="h">
+    </form>
 </body>
 </html>
