--- a/직접 실습 해본것들/MVCpatternSample(Read가 안됨)/src/main/resources/templates/articles/show.mustache
+++ b/직접 실습 해본것들/MVCpatternSample(Read가 안됨)/src/main/resources/templates/articles/show.mustache
@@ -17,4 +17,6 @@
     {{/article}}
     </tbody>
 </table>
+<a href="/articles/{{article.id}}/edit" class="btn btn-primary">수정하는곳</a>
+<a href="/articles">목록으로 돌아가기</a>
 {{>layouts/footer}}
