--- a/직접 실습 해본것들/MVCpatternSample(Read가 안됨)/src/main/resources/templates/articles/new.mustache
+++ b/직접 실습 해본것들/MVCpatternSample(Read가 안됨)/src/main/resources/templates/articles/new.mustache
@@ -9,6 +9,7 @@
         <textarea class="form-control" rows="3" name="content"></textarea>
     </div>
     <button type="submit" class="btn btn-primary">제출</button>
+    <a href="/articles">목록으로 돌아가기</a>
 </form>
 
 {{>layouts/footer}}
