--- a/직접 실습 해본것들/MVCpatternSample(REST API구현)/src/main/resources/templates/articles/show.mustache
+++ b/직접 실습 해본것들/MVCpatternSample(REST API구현)/src/main/resources/templates/articles/show.mustache
@@ -17,6 +17,7 @@
     {{/article}}
     </tbody>
 </table>
-<a href="/articles/{{article.id}}/edit" class="btn btn-primary">수정하는곳</a>
+<a href="/articles/{{article.id}}/edit" class="btn btn-primary">수정하는 곳</a>
+<a href="/articles/{{article.id}}/delete" class="btn btn-danger">삭제하는 곳</a>
 <a href="/articles">목록으로 돌아가기</a>
 {{>layouts/footer}}
